<resources>

    <string name="app_name">GeoPics</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_capture">CaptureActivity</string>
    <string name="captureButtonLabel">Take Picture</string>
    <string name="captureImageContentDesc">Shows the captured picture</string>
    <string name="saveButtonLabel">Save</string>
    <string name="longitudeLabel">Longitude</string>
    <string name="latitudeLabel">Latitude</string>

</resources>